# Gles

jagles/: CMakeLists.txt  build.gradle  proguard-rules.pro
jagles/src/androidTest/java/com/app/jagles/: ExampleInstrumentedTest.java
jagles/src/main/: AndroidManifest.xml
jagles/src/main/debug/: AndroidManifest.xml
jagles/src/main/java/com/app/jagles/HWCodec/: Drawable2d.java  FlatShadedProgram.java  FullFrameRect.java  GlUtil.java  HWDecoder.java  HWMP4Encoder.java  HWPlayer.java  IFrameCallback.java  MediaMoviePlayer.java  Texture2dProgram.java  TextureMovieEncoder2.java  VideoEncoderCore.java
jagles/src/main/java/com/app/jagles/activity/: DemoConnectActivity.java  MainActivity.java  SurfaceViewActivity.java
jagles/src/main/java/com/app/jagles/animation/: Animation.java
jagles/src/main/java/com/app/jagles/audio/: AudioChat.java  BytesTransUtil.java  EncoderAudio.java  G711Base.java  PCMA.java  VideoAudioTrack.java
jagles/src/main/java/com/app/jagles/connect/: JAConnector.java
jagles/src/main/java/com/app/jagles/controller/: JAParameter.java  PlayManager.java
jagles/src/main/java/com/app/jagles/crash/: NativeCrashCapture.java
jagles/src/main/java/com/app/jagles/eventbus/: GLPlayFrameComeBackEventBus.java
jagles/src/main/java/com/app/jagles/listener/: AnimationEndListener.java  AudioDataListener.java  CaptureImageListener.java  ConnectStatusListener.java  DestoryListener.java  FrameDataComeListener.java  GLVideoSurfaceCreateListener.java  GestureListener.java  HWDecoderCaptureLinstener.java  OSDTimeListener.java  (+10 more)
jagles/src/main/jni/: com_app_jagles_video_GLVideoConnect.h  com_app_jagles_video_GLVideoRender.h
jagles/src/main/jni/breakpad/client/.deps/: minidump_file_writer.Po
jagles/src/main/jni/breakpad/common/.deps/: md5.Po  src_tools_linux_dump_syms_dump_syms-dwarf_cfi_to_module.Po  src_tools_linux_dump_syms_dump_syms-dwarf_cu_to_module.Po  src_tools_linux_dump_syms_dump_syms-dwarf_line_to_module.Po  src_tools_linux_dump_syms_dump_syms-language.Po  src_tools_linux_dump_syms_dump_syms-module.Po  src_tools_linux_dump_syms_dump_syms-stabs_reader.Po  src_tools_linux_dump_syms_dump_syms-stabs_to_module.Po  src_tools_mac_dump_syms_dump_syms_mac-dwarf_cfi_to_module.Po  src_tools_mac_dump_syms_dump_syms_mac-dwarf_cu_to_module.Po  src_tools_mac_dump_syms_dump_syms_mac-dwarf_line_to_module.Po  src_tools_mac_dump_syms_dump_syms_mac-language.Po  src_tools_mac_dump_syms_dump_syms_mac-md5.Po  src_tools_mac_dump_syms_dump_syms_mac-module.Po  src_tools_mac_dump_syms_dump_syms_mac-stabs_reader.Po  src_tools_mac_dump_syms_dump_syms_mac-stabs_to_module.Po  string_conversion.Po
jagles/src/main/jni/breakpad/processor/: minidump_dump
jagles/src/main/jni/breakpad/processor/.deps/: basic_code_modules.Po  basic_source_line_resolver.Po  call_stack.Po  cfi_frame_info.Po  disassembler_x86.Po  dump_context.Po  exploitability.Po  exploitability_linux.Po  exploitability_win.Po  fast_source_line_resolver.Po  logging.Po  microdump.Po  microdump_processor.Po  microdump_stackwalk.Po  minidump.Po  minidump_dump.Po  minidump_processor.Po  minidump_stackwalk.Po  module_comparer.Po  module_serializer.Po  pathname_stripper.Po  proc_maps_linux.Po  process_state.Po  simple_symbol_supplier.Po  source_line_resolver_base.Po  stack_frame_cpu.Po  stack_frame_symbolizer.Po  stackwalk_common.Po  stackwalker.Po  stackwalker_address_list.Po  stackwalker_amd64.Po  stackwalker_arm.Po  stackwalker_arm64.Po  stackwalker_mips.Po  stackwalker_ppc.Po  stackwalker_ppc64.Po  stackwalker_sparc.Po  stackwalker_x86.Po  symbolic_constants_win.Po  tokenize.Po
jagles/src/main/jni/breakpad/processor/testdata/: linux_test_app.cc
jagles/src/main/jni/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
jagles/src/main/jni/gles/GLES/: BaseScreen.cpp  BaseScreen.h  CircleDetection.cpp  CircleDetection.h  CircleFrame.cpp  CircleFrame.h  Cylinder.cpp  Cylinder.h  DynamicLibrary.cpp  DynamicLibrary.h  Expand.cpp  Expand.h  ExpandFrameDraw.cpp  ExpandFrameDraw.h  FourScreen.cpp  FourScreen.h  GLESMath.c  GLESMath.h  GPUMotionDetection.cpp  GPUMotionDetection.h  GPUMotionTracking.cpp  GPUMotionTracking.h  GraphicBuffer.cpp  GraphicBuffer.h  Hemisphere.cpp  Hemisphere.h  ImageLoading.cpp  ImageLoading.h  JAFileTexture.cpp  JAFileTexture.h  NormalPlay.cpp  NormalPlay.h  NormalScreen.cpp  NormalScreen.h  OneScreen.cpp  OneScreen.h  ParametricManager.cpp  ParametricManager.h  ParametricSurface.cpp  ParametricSurface.h  (+28 more)
jagles/src/main/jni/gles/Media/: JAMedia.cpp  JAMedia.h  JAPlayer.cpp  JAPlayer.h  JAText.cpp  JAText.h  OpenALManager.cpp  OpenALManager.h  ag711.cpp  ag711.h  h264wh.cpp  h264wh.h  h265wh.cpp  h265wh.h
jagles/src/main/jni/gles/Network/: ConnectManager.cpp  ConnectManager.h  JAConnect.cpp  JAConnect.cpp_  JAConnect.h  JAConnect.h_  JADefine.h  JAP2PConnector.cpp  JAP2PConnector.h  JAP2PConnector2.cpp  JAP2PConnector2.h  JAP2PManager.cpp  JAP2PManager.h  kp2psdk-1.h  kp2psdk.h  libjnnat.h
jagles/src/main/jni/gles/Resources/: asc32.font  hzk24.font  hzk32.font
jagles/src/main/jni/gles/Utils/: list.h  mediabuffer.c  mediabuffer.h  osxtime.c  osxtime.h  wintime.cpp  wintime.h
jagles/src/main/jni/gles/platform/Android/: GLVideoConnect.cpp  GLVideoDisplay.cpp  HWCodec.h
jagles/src/main/jni/jnnat/: libjnnat.h
jagles/src/main/jni/smartLink/: com_app_jagles_smartlink_SmartLink.c  com_app_jagles_smartlink_SmartLink.h
jagles/src/main/res/drawable/: common_shape_dialog_alert_base.xml  selector_default_item_bg.xml  selector_default_item_tra_bg.xml
jagles/src/main/res/layout/: activity_demo_connect.xml  activity_main.xml  activity_surface_view.xml  dialog_add_device_layout.xml  dialog_delete_layout.xml  include_action_layout.xml  include_title_bar_layout.xml  item_demo_device_layout.xml  item_device_list_layout.xml  item_screen_layout.xml
jagles/src/main/res/raw/: asc24.font
jagles/src/main/res/values/: color.xml  dimens.xml  strings.xml  style.xml
jagles/src/test/java/com/app/jagles/: ExampleUnitTest.java
(+149 files in other folders)
